--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ font-family: 'Newsreader', serif;
 font-weight: bold;
 }
 
-.Home-page {
+/* .Home-page {
  border-style: solid;
  border-width: 5px;
-}
+} */
