--- a/src/components/components.css
+++ b/src/components/components.css
@@ -61,5 +61,9 @@
 
 /* footer */
 .footer {
-text-align: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
 }
