--- a/src/pages/Pages.css
+++ b/src/pages/Pages.css
@@ -45,7 +45,67 @@
 }
 
 .home-text p {
-    flex-wrap: wrap;
-    font-size: 25px;
-    margin-left: 15px;
+  flex-wrap: wrap;
+  font-size: 25px;
+  margin-left: 15px;
+}
+
+.login-info {
+  background-image: url("/src/assets/flight.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+}
+.login-info a {
+  font-family: "Newsreader", serif;
+}
+
+.login-info a:hover {
+  color: black;
+  text-decoration: none;
+}
+
+/* this is for the email and password */
+.login-info form {
+  margin-top: 0px;
+  text-align: center;
+  border-radius: 8px;
+  color: #c96142;
+  padding: 0%;
+}
+
+/* this is for the handlesubmit characteristics*/
+.login-info input {
+  margin-bottom: 100px;
+  border-radius: 5px;
+  color: #c96142;
+  font-size: 20px;
+}
+
+.login-info .input-container {
+    padding: 50px;
+  }
+
+.login-header {
+  text-align: center;
+  background-color: white;
+  width: 1500px;
+  height: 80px;
+  font-weight: bold;
+  font-family: ˝ "Newsreader", serif;
+}
+
+.registration-login {
+  color: black;
+}
+
+.registration-login a:hover {
+  color: blue;
+  text-decoration: none;
 }
