--- a/src/pages/Aboutus.css
+++ b/src/pages/Aboutus.css
@@ -1,30 +1,51 @@
 .about-title {
     font-family: Newsreader-Regular;
 }
-
-.card {
+/* card-container wraps all 4 cards */
+.card-container{
     display: flex;
     justify-content: space-around;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    margin:0, auto;
-    padding: 10px, 10px;
-    position: static;
-    margin-bottom: 50px;
-    align-content: center;
+    padding: 15px;
+    margin-top: 20px;
+    position:static;
+    border-radius: 8px;
+   
 }
+/* adjust card text */
 
-.card img {
+/* Customize the Card Directly  */
+.card-title {
+    font-size: 20px;
+}
+.card-subtitle {
+    font-size: 20px;
+    color: #c54620 !important;
+}
+.card-text {
+    margin: auto;
+    font-size: 15px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.card {
     display: flex;
+    justify-content: space-between;
+    height: 750px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8);
+    overflow: hidden;
+}
+.card img {
+   display: flex;
    border-radius: 5px;
    justify-content: center;
+   width: 18rem;
+   border-radius: 5px 5px 0px 0px;
 }
 
 .card-body {
     text-align: center;
-    flex-wrap: wrap;
-    border-radius: 5px;
-    justify-content: space-around;
+    background-color:#C99B7D;
+    border-radius: 0px 0px 5px 5px;
 }
 
 .card-body h6{
@@ -39,4 +60,4 @@
     border-radius: 5px;
     text-decoration: none;
 }
-
+/* End of Card Customization */
