--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,6 @@ font-family: 'Newsreader', serif;
 font-weight: bold;
 }
 
-/* .Home-page {
- border-style: solid;
- border-width: 5px;
-} */
+.app {
+  background-image: linear-gradient(to bottom right, white, orange);
+}
