--- a/src/components/components.css
+++ b/src/components/components.css
@@ -11,6 +11,11 @@
   text-align: center;
 }
 
+.title a {
+  color: #c96142;
+  text-decoration: none;
+}
+
 .navigation-bar {
   display: flex;
   justify-content: space-around;
@@ -72,7 +77,7 @@
 /* footer */
 .footer {
 text-align: center;
-  position: fixed;
+  position: relative;
   left: 0;
   bottom: 0;
   width: 100%;
