--- a/src/pages/Aboutus.css
+++ b/src/pages/Aboutus.css
@@ -1,5 +1,6 @@
 .about-title {
     font-family: Newsreader-Regular;
+    text-align: center;
 }
 /* card-container wraps all 4 cards */
 .card-container{
@@ -29,6 +30,7 @@
     display: flex;
     justify-content: space-between;
     height: 750px;
+    width: 18rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8);
     overflow: scroll;
     overflow-x: hidden;
@@ -59,5 +61,9 @@
     color: white;
     border-radius: 5px;
     text-decoration: none;
+}
+
+.card a:hover {
+    color: black;
 }
 /* End of Card Customization */
